--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,12 @@ authors = [
     {name = "Bartek Svaberg", email = "example@example.com"}
 ]
 requires-python = ">=3.10"
+dependencies = [
+    "pyyaml>=6.0",
+    "sqlalchemy>=2.0.40",
+    "alembic>=1.15.2",
+    "psycopg2-binary>=2.9.10",
+]
 classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
