--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, develop ]
   pull_request:
-    branches: [ main ]
+    branches: [ main, develop ]
 
 jobs:
   test:
@@ -28,13 +28,50 @@ jobs:
         flake8 referee_stats_fogis tests
     - name: Check formatting with black
       run: |
-        black --check referee_stats_fogis tests
+        black --check --preview referee_stats_fogis tests
     - name: Check import sorting with isort
       run: |
         isort --check referee_stats_fogis tests
     - name: Type check with mypy
       run: |
         mypy referee_stats_fogis
+    - name: Check with pyupgrade
+      run: |
+        pip install pyupgrade
+        pyupgrade --py310-plus $(find referee_stats_fogis tests -name "*.py")
+    - name: Check with docformatter
+      run: |
+        pip install docformatter
+        docformatter --check --wrap-summaries=88 --wrap-descriptions=88 $(find referee_stats_fogis tests -name "*.py")
+    - name: Check with autoflake
+      run: |
+        pip install autoflake
+        autoflake --check --remove-all-unused-imports --remove-unused-variables $(find referee_stats_fogis tests -name "*.py")
     - name: Test with pytest
       run: |
-        pytest --cov=referee_stats_fogis tests/
+        pytest --cov=referee_stats_fogis --cov-report=xml --cov-report=term tests/
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v3
+      with:
+        file: ./coverage.xml
+        fail_ci_if_error: true
+
+  build:
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+    - uses: actions/checkout@v3
+    - name: Set up Python 3.12
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.12'
+    - name: Install build dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install build twine
+    - name: Build package
+      run: |
+        python -m build
+    - name: Check package
+      run: |
+        twine check dist/*
