--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,10 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -e ".[dev]"
+        pip install build
+        python -m build --sdist --wheel --outdir dist
+        pip install dist/*.whl
+        pip install ".[dev]"
     - name: Lint with flake8
       run: |
         flake8 referee_stats_fogis tests
@@ -71,7 +74,11 @@ jobs:
         pip install build twine
     - name: Build package
       run: |
-        python -m build
+        python -m build --sdist --wheel
     - name: Check package
       run: |
         twine check dist/*
+    - name: Test installation from wheel
+      run: |
+        pip install dist/*.whl
+        python -c "import referee_stats_fogis; print(referee_stats_fogis.__name__)"
