--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -47,6 +47,17 @@ repos:
 
 -   repo: local
     hooks:
+    -   id: check-build
+        name: check-build
+        entry: python -c "import setuptools; print('Setuptools is available');"
+        language: python
+        pass_filenames: false
+        files: ^(pyproject\.toml|setup\.py|setup\.cfg)$
+        additional_dependencies: [setuptools]
+        always_run: true
+
+-   repo: local
+    hooks:
     -   id: docformatter
         name: docformatter
         description: 'Formats docstrings to follow PEP 257'
