--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,11 +11,14 @@ authors = [
     {name = "Bartek Svaberg", email = "example@example.com"}
 ]
 requires-python = ">=3.10"
+license = {text = "MIT"}
 classifiers = [
     "Programming Language :: Python :: 3",
-    "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
 ]
+
+[tool.setuptools]
+packages = ["referee_stats_fogis"]
 
 [project.optional-dependencies]
 dev = [
