--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -12,6 +12,11 @@ mypy>=1.8.0
 pytest>=7.4.0
 pytest-cov>=4.1.0
 pre-commit>=3.5.0
+build>=1.0.3
+twine>=4.0.2
+docformatter>=1.7.5
+pyupgrade>=3.15.0
+autoflake>=2.2.1
 
 # Type stubs
 types-PyYAML>=6.0.12.12
