--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,10 +22,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install build
-        python -m build --sdist --wheel --outdir dist
-        pip install dist/*.whl
-        pip install ".[dev]"
+        pip install -e ".[dev]"
     - name: Lint with flake8
       run: |
         flake8 referee_stats_fogis tests
@@ -82,3 +79,6 @@ jobs:
       run: |
         pip install dist/*.whl
         python -c "import referee_stats_fogis; print(referee_stats_fogis.__name__)"
+    - name: Verify migrations directory is excluded
+      run: |
+        pip show referee_stats_fogis | grep -v "migrations"
