--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ dev = [
     "flake8-quotes>=3.3.2",
     "flake8-bugbear>=24.2.6",
     "mypy>=1.8.0",
+    "types-PyYAML>=6.0.12",
     "pytest>=7.4.0",
     "pytest-cov>=4.1.0",
     "pre-commit>=3.5.0",
@@ -66,6 +67,11 @@ warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = true
 disallow_incomplete_defs = true
+disallow_untyped_decorators = true
+no_implicit_optional = true
+check_untyped_defs = true
+disallow_any_unimported = true
+warn_redundant_casts = true
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
