--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -37,6 +37,7 @@ repos:
         additional_dependencies: [
             'types-requests',
             'types-PyYAML',
+            'sqlalchemy-stubs',
         ]
 
 -   repo: https://github.com/asottile/pyupgrade
