--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -63,5 +63,9 @@ repos:
         args: [
             --remove-all-unused-imports,
             --remove-unused-variables,
-            --in-place
+            --in-place,
+            --expand-star-imports,
+            --remove-duplicate-keys
         ]
+        files: \.py$
+        exclude: ^migrations/
