--- a/.mypy.ini
+++ b/.mypy.ini
@@ -23,3 +23,6 @@ disallow_any_unimported = False
 check_untyped_defs = False
 # Disable var-annotated errors
 disable_error_code = var-annotated
+
+[mypy-tests.*]
+disallow_untyped_decorators = False
