--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,11 +53,12 @@ jobs:
     - name: Test with pytest
       run: |
         pytest --cov=referee_stats_fogis --cov-report=xml --cov-report=term tests/
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v3
+    - name: Upload coverage report as artifact
+      uses: actions/upload-artifact@v3
       with:
-        file: ./coverage.xml
-        fail_ci_if_error: true
+        name: coverage-report
+        path: ./coverage.xml
+        retention-days: 1
 
   build:
     runs-on: ubuntu-latest
@@ -82,3 +83,13 @@ jobs:
       run: |
         pip install dist/*.whl
         python -c "import referee_stats_fogis; print(referee_stats_fogis.__name__)"
+    - name: Download coverage report
+      uses: actions/download-artifact@v3
+      with:
+        name: coverage-report
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v3
+      with:
+        file: ./coverage.xml
+        fail_ci_if_error: false
+        verbose: true
