--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -79,3 +79,9 @@ repos:
         ]
         files: \.py$
         exclude: ^migrations/
+
+-   repo: https://github.com/rhysd/actionlint
+    rev: v1.6.26
+    hooks:
+    -   id: actionlint
+        args: [-ignore, 'SC2046']
