--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,9 +9,11 @@ repos:
     -   id: check-toml
     -   id: debug-statements
     -   id: check-merge-conflict
+    -   id: mixed-line-ending
+        args: [--fix=lf]
 
 -   repo: https://github.com/psf/black
-    rev: 24.3.0
+    rev: 24.1.1
     hooks:
     -   id: black
         args: [--preview]  # More aggressive line breaking
