--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -88,3 +88,6 @@ repos:
     hooks:
     -   id: actionlint
         args: [-ignore, 'SC2046']
+        name: Lint GitHub Actions workflow files
+        description: Validates GitHub Actions workflow files
+        verbose: true
