Fix mypy configuration for CI environment

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,8 +43,8 @@ jobs:
         isort --check referee_stats_fogis tests
     - name: Type check with mypy
       run: |
-        pip install types-PyYAML sqlalchemy-stubs
-        mypy --config-file=.mypy.ini referee_stats_fogis
+        pip install types-PyYAML sqlalchemy-stubs mypy==1.8.0
+        python -m mypy --config-file=.mypy.ini referee_stats_fogis
     - name: Check with pyupgrade
       run: |
         pip install pyupgrade
