--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -36,10 +36,12 @@ repos:
     rev: v1.8.0
     hooks:
     -   id: mypy
+        args: [--config-file=.mypy.ini]
         additional_dependencies: [
             'types-requests',
             'types-PyYAML>=6.0.12',
             'sqlalchemy-stubs>=0.4',
+            'sqlalchemy>=1.4.0',
         ]
 
 -   repo: https://github.com/asottile/pyupgrade
