Fix unused imports and variables and enhance mypy configuration

--- a/.mypy.ini
+++ b/.mypy.ini
@@ -34,3 +34,12 @@ disallow_any_unimported = False
 check_untyped_defs = False
 disallow_untyped_decorators = False
 ignore_errors = True
+
+[mypy-migrations.*]
+ignore_errors = True
+
+[mypy-setuptools.*]
+ignore_missing_imports = True
+
+[mypy-alembic.*]
+ignore_missing_imports = True
