--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,7 +73,7 @@ jobs:
     - name: Upload coverage report as artifact
       uses: actions/upload-artifact@v4
       with:
-        name: coverage-report
+        name: coverage-report-${{ github.run_id }}
         path: ./coverage.xml
         retention-days: 1
 
@@ -103,7 +103,7 @@ jobs:
     - name: Download coverage report
       uses: actions/download-artifact@v4
       with:
-        name: coverage-report
+        name: coverage-report-${{ github.run_id }}
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
       with:
