#16: Update mypy configuration to ignore SQLAlchemy-related errors

--- a/.mypy.ini
+++ b/.mypy.ini
@@ -24,5 +24,9 @@ check_untyped_defs = False
 # Disable var-annotated errors
 disable_error_code = var-annotated
 
+[mypy-referee_stats_fogis.core.importer]
+# Disable assignment errors for SQLAlchemy models
+disable_error_code = assignment,arg-type
+
 [mypy-tests.*]
 disallow_untyped_decorators = False
