--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -e ".[dev]"
+        pre-commit install
     - name: Lint with flake8
       run: |
         flake8 referee_stats_fogis tests
@@ -47,6 +48,9 @@ jobs:
       run: |
         pip install autoflake
         autoflake --check --remove-all-unused-imports --remove-unused-variables --expand-star-imports --remove-duplicate-keys $(find referee_stats_fogis tests -name "*.py")
+    - name: Verify pre-commit hooks
+      run: |
+        python scripts/verify_hooks.py
     - name: Test with pytest
       run: |
         pytest --cov=referee_stats_fogis --cov-report=xml --cov-report=term tests/
