--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -46,15 +46,12 @@ repos:
     -   id: pyupgrade
         args: [--py310-plus]
 
--   repo: local
-    hooks:
-    -   id: docformatter
-        name: docformatter
-        description: 'Formats docstrings to follow PEP 257'
-        entry: docformatter
-        args: [--in-place, --wrap-summaries=88, --wrap-descriptions=88]
-        language: python
-        types: [python]
+# Temporarily disabled due to installation issues
+# -   repo: https://github.com/PyCQA/docformatter
+#     rev: v1.7.5
+#     hooks:
+#     -   id: docformatter
+#         args: [--wrap-summaries=88, --wrap-descriptions=88, --in-place]
 
 -   repo: https://github.com/PyCQA/autoflake
     rev: v2.2.1
